# docuparser

./: .gitignore  CLAUDE.md  README.md  commands.md  main.py  pyproject.toml  run-docker.sh  run-pipe.sh  stop_all.sh  workflow.md
.runtime/: backend-core.pid  backend-ocr.pid  frontend.pid
.specify/: feature.json
docs/: backend-com-comments.md  backend-ocr-classifier.md  backend-ocr-comments.md  correcao-token-interno.md  implementation-action-plan.md  langextract_integration_map.md  regras_classificacao_roteamento_fallback.md
docuparse-project/: .dockerignore  README.md  docker-compose.yml
docuparse-project/backend-com/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  prestart_dev.sh  pyproject.toml
docuparse-project/backend-com/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
docuparse-project/backend-com/src/atoms/: camunda_decorator.py  camunda_server.py  config.py  fastapi_app.py  fastapi_decorator.py  logging.py  send_to_webhook.py  zeebe_decorator.py  zeebe_server.py
docuparse-project/backend-com/src/atoms/debounce/: celery_guide.md  debounced_queue.py  example.py  pytest.py
docuparse-project/backend-com/src/atoms/email_reader/: __init__.py  config.py
docuparse-project/backend-com/src/atoms/email_reader/api/v1/: camunda.py  fastapi.py
docuparse-project/backend-com/src/atoms/email_reader/examples/: example.py
docuparse-project/backend-com/src/atoms/email_reader/service/: __init__.py  email_reader.py
docuparse-project/backend-com/src/atoms/whatsapp/: __init__.py
docuparse-project/backend-com/src/atoms/whatsapp/twilio/: config.py
docuparse-project/backend-com/src/atoms/whatsapp/twilio/api/v1/: __init__.py  camunda.py  fastapi.py
docuparse-project/backend-com/src/atoms/whatsapp/twilio/service/: __init__.py  dependencies.py  twilio_client.py  webhook.py
docuparse-project/backend-com/src/backend_com/: config.py  imap_poll.py
docuparse-project/backend-com/src/backend_com/api/: app.py
docuparse-project/backend-com/src/backend_com/services/: document_ingest.py  email_capture.py  imap_polling.py  manual_upload.py  twilio_polling.py  whatsapp_capture.py
docuparse-project/backend-com/tests/: conftest.py  test_backend_com_app.py
scripts/: .env.example  README_OLMOCR.md  (+11 more)
(+356 files in other folders)
