[project]
name = "docuparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pypdfium2>=5.7.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.26",
]
